voter users mechanics and fucntions done now working on voter user names positioning

--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -65,7 +65,7 @@
 
 
 
-        <!--❤️ TEMPLATES FOR SLIDES , GROUP NAMES, SINGLE NAME, IMAGE SLIDE -->
+        <!--❤️ TEMPLATES FOR SLIDES , GROUP NAMES, SINGLE NAME, IMAGE SLIDE ❤️-->
 
         <!-- IMAGE SLIDE  -->
         <div *ngIf="(slideType === 'Image')" class="imagePresentar" [style.background]="slideBackground"></div>
@@ -160,50 +160,76 @@
                     </div>
                 </div>
 
+                <!-- VOTERS LIST WINDOWS ☠️-->
+                <div *ngIf="true" class="voteOverview">
+
+                    <button class="voteOverviewBox"
+                        style="overflow-y: scroll;overflow-x: hidden;border-top-left-radius: 5px; border-top-right-radius: 5px;">
+                        <div style="display: flex; flex-direction: column;">
+                            <span *ngFor="let item of nwPositiveVoteUsers">{{item}}</span>
+                        </div>
+                    </button>
+                    <button class="voteOverviewBox" style="overflow-y: scroll;overflow-x: hidden;border-top-left-radius: 5px; border-top-right-radius: 5px;">
+                        <div style="display: flex; flex-direction: column;">
+                            <span *ngFor="let item of nwNeutralVoteUsers">{{item}}</span>
+                        </div>
+                    </button>
+                    <button class="voteOverviewBox" style="overflow-y: scroll;overflow-x: hidden;border-top-left-radius: 5px; border-top-right-radius: 5px;">
+                        <div style="display: flex; flex-direction: column;">
+                            <span *ngFor="let item of nwNegativeVoteUsers">{{item}}</span>
+                        </div>
+                    </button>
+                    <button class="voteOverviewBox" style="overflow-y: scroll;overflow-x: hidden;border-top-left-radius: 5px; border-top-right-radius: 5px;">
+                        <div style="display: flex; flex-direction: column; justify-content: flex-end;">
+                            <span *ngFor="let item of HEROES">{{item.name}}</span>
+                        </div>
+
+                    </button>
+
+                </div>
 
 
-                <!--VOTE EMOJI BUTTONS -->
+                <!--VOTE EMOJI BUTTONS 👽-->
                 <div class="voteIcons">
 
 
                     <!-- POSITIVE BUTTON -->
-                    <button *ngIf="positiveChecked" matBadge="8" matBadgePosition="after" matBadgeColor="accent"
-                        class="voteIconButtonGreen" (click)="selectedOpt('Positive');" mat-icon-button >
+                    <button *ngIf="positiveChecked" [matBadge]="positiveUsersVote" class="voteIconButtonGreen"
+                        (click)="selectedOpt('Positive');" mat-icon-button>
                         <mat-icon>sentiment_very_satisfied</mat-icon>
                     </button>
 
-                    <button *ngIf="!positiveChecked" matBadge="12" matBadgeColor="accent" class="voteIconButton"
-                        (click)="selectedOpt('Positive');" mat-icon-button >
+                    <button *ngIf="!positiveChecked" [matBadge]="positiveUsersVote" class="voteIconButton voteIconButton1"
+                        (click)="selectedOpt('Positive');" mat-icon-button>
                         <mat-icon>sentiment_very_satisfied</mat-icon>
                     </button>
-                    <!-- <span matBadge="8" matBadgePosition="after" matBadgeColor="accent">Text with a badge</span> -->
 
-                    <button *ngIf="neutralChecked" matBadge="12" matBadgeColor="accent" class="voteIconButtonYellow" (click)="selectedOpt('Neutral');"
-                        mat-icon-button >
+                    <button *ngIf="neutralChecked" [matBadge]="NeutralUsersVote" class="voteIconButtonYellow"
+                        (click)="selectedOpt('Neutral');" mat-icon-button>
                         <mat-icon>sentiment_neutral</mat-icon>
                     </button>
-                    <button *ngIf="!neutralChecked" matBadge="12" matBadgeColor="accent" class="voteIconButton" (click)="selectedOpt('Neutral');"
-                        mat-icon-button >
+                    <button *ngIf="!neutralChecked" [matBadge]="NeutralUsersVote" class="voteIconButton voteIconButton2"
+                        (click)="selectedOpt('Neutral');" mat-icon-button>
                         <mat-icon>sentiment_neutral</mat-icon>
                     </button>
 
                     <!-- NEGATIVE BUTTON -->
-                    <button *ngIf="negativeChecked" matBadge="12" matBadgeColor="accent" class="voteIconButtonRed" (click)="selectedOpt('Negative');"
-                        mat-icon-button >
+                    <button *ngIf="negativeChecked" [matBadge]="NegativeUsersVote" class="voteIconButtonRed"
+                        (click)="selectedOpt('Negative');" mat-icon-button>
                         <mat-icon>sentiment_very_dissatisfied</mat-icon>
                     </button>
-                    <button *ngIf="!negativeChecked" matBadge="12" matBadgeColor="accent" class="voteIconButton" (click)="selectedOpt('Negative');"
-                        mat-icon-button >
+                    <button *ngIf="!negativeChecked" [matBadge]="NegativeUsersVote" class="voteIconButton voteIconButton3"
+                        (click)="selectedOpt('Negative');" mat-icon-button>
                         <mat-icon>sentiment_very_dissatisfied</mat-icon>
                     </button>
 
                     <!-- RECRAFT BUTTON -->
-                    <button *ngIf="recraftChecked"  matBadge="12" matBadgeColor="accent" class="voteIconButtonPurple" (click)="selectedOpt('recraft');"
-                        mat-icon-button >
+                    <button *ngIf="recraftChecked" [matBadge]="allVoters" class="voteIconButtonPurple"
+                        (click)="selectedOpt('recraft');" mat-icon-button>
                         <mat-icon>sync</mat-icon>
                     </button>
-                    <button *ngIf="!recraftChecked"  matBadge="12" matBadgeColor="accent" class="voteIconButton" (click)="selectedOpt('recraft');"
-                        mat-icon-button >
+                    <button *ngIf="!recraftChecked" [matBadge]="allVoters" class="voteIconButton voteIconButton4"
+                        (click)="selectedOpt('recraft');" mat-icon-button>
                         <mat-icon>sync</mat-icon>
                     </button>
 
@@ -212,43 +238,21 @@
             </div>
 
 
-
-            <!-- VOTERS LIST WINDOWS  NO IMPLEMENTED YET-->
-            <div *ngIf="true" class="voteOverview">
-
-                <button class="voteOverviewBox"  style="overflow-y: scroll;overflow-x: hidden;border-top-left-radius: 5px; border-top-right-radius: 5px;">
-                    <div style="display: flex; flex-direction: column;">
-                        <span *ngFor="let item of HEROES">{{item.name}}</span>
-                    </div>
-                </button>
-                <button class="voteOverviewBox" >
-
-                </button>
-                <button class="voteOverviewBox" >
-
-                </button>
-                <button class="voteOverviewBox" >
-
-                </button>
-
-            </div>
-
-
-            <!-- BI BRAND GO VOTE BUTTON -->
+            <!-- BI BRAND GO VOTE BUTTON 🎃-->
             <div class="smartRadialButton">
 
                 <button [ngClass]="(isGoVoteOn)?'GO':'GO_Off'" mat-icon-button (click)="goVote()">
                     BI
                 </button>
-                <button class="G4 GG" mat-icon-button (click)="setAllNamesIcon('thumb_down_off_alt', 'purple')"
-                style="color: yellow;background-color: RGB(1, 1, 139);border:3px solid yellow">
-                   N
+                <button *ngIf="displayTallyButtons" class="neutralBadgeTally GG" [matBadge]="totalPositive" mat-icon-button
+                    (click)="setAllNamesIcon('thumb_down_off_alt', 'purple')">
+                    N
                 </button>
-                <button class="G1 GG" mat-icon-button (click)="setAllNamesIcon('sentiment_very_satisfied', 'yellow')" 
-                style="color: chartreuse;background-color: RGB(1, 1, 139);border:3px solid chartreuse">
-                   P
+                <button *ngIf="displayTallyButtons" class="positiveBadgeTally GG" [matBadge]="totalNeutral" mat-icon-button
+                    (click)="setAllNamesIcon('sentiment_very_satisfied', 'yellow')">
+                    P
                 </button>
-    
+
 
 
                 <!-- COMMENT AND NEW NAMES TEXTAREAS -->
@@ -347,7 +351,7 @@
         </div>
 
 
-        <!--💔 END OF TEMPLATES FOR SLIDES , GROUP NAMES, SINGLE NAME, IMAGE SLIDE -->
+        <!--💔 END OF TEMPLATES FOR SLIDES , GROUP NAMES, SINGLE NAME, IMAGE SLIDE 💔-->
 
     </div>
 
@@ -398,8 +402,12 @@
         <button matTooltip="mobile app" matTooltipPosition="left" mat-icon-button color="red">
             <mat-icon class="full-icon">phone_iphone</mat-icon>
         </button>
-        <button *ngIf="true" mat-icon-button matTooltip="names box" matTooltipPosition="left">
+        <button *ngIf="true" (click)="voteUserBadges()" mat-icon-button matTooltip="names box"
+            matTooltipPosition="left">
             <mat-icon class="full-icon">where_to_vote</mat-icon>
+        </button>
+        <button *ngIf="true" (click)="displayTally()" mat-icon-button matTooltip="tally" matTooltipPosition="left">
+            <mat-icon class="full-icon">T</mat-icon>
         </button>
         <button *ngIf="true" matTooltip="stats" matTooltipPosition="left" mat-icon-button aria-label="aria">
             <mat-icon class="full-icon">bar_chart</mat-icon>
