--- a/src/app/bmx/bmx.component.html
+++ b/src/app/bmx/bmx.component.html
@@ -27,7 +27,8 @@
         </div>
 
         <div class="slideToLoginBoundary">
-            <button mat-icon-button class="GO" cdkDragBoundary=".slideToLoginBoundary" cdkDragLockAxis="x" cdkDrag (swipe)="onSwipe($event)">
+            <button mat-icon-button class="GO" cdkDragBoundary=".slideToLoginBoundary" cdkDragLockAxis="x" cdkDrag
+             (swipe)="onSwipe($event)">
                 BI
             </button>
             <!-- <mat-icon style="color: darkblue;">crop_16_9</mat-icon> -->
