--- a/src/app/nw3/nw3.component.scss
+++ b/src/app/nw3/nw3.component.scss
@@ -976,6 +976,12 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     @include BoxShadow(16);
   }
 
+  .info{
+      .img{
+          width: 200px;
+      }
+  }
+
 // .example-card {
 //     width: 400px;
 // }
